# The-Gaming-Rumble

./: .env.example  .gitignore  LICENSE  README.md  index.html  main.py  package-lock.json  package.json  requirements.txt  requirements_translations.json  scrapper.py  stats.json  steam_applist.py  sync_catalog.py  tailwind.config.ts  vercel.json  vite.config.ts
.github/releases/: _template.md  v1.0.1.md  v1.0.2.md  v1.0.3.md  v1.0.5.md  v1.0.6.md  (+1 more)
api/: cron.ts  get-games.js  update-games.js
app/: __init__.py  bot.py  config.py  logging_config.py
cogs/: __init__.py  admin.py  bot_config.py  config.py  emoji.py  games.py  listener.py  system.py
domain/: __init__.py  models.py
repositories/: game_repository.py  guild_config_repository.py  stats_repository.py
services/: game_service.py  guild_config_service.py  stats_service.py
src/: App.css  App.tsx  index.css  payload.ts  types.ts
src-tauri/: Cargo.toml  admin-manifest.xml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/resources/7-ZIP/: History.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: archive.rs  disk.rs  library.rs  logger.rs  mod.rs  system.rs  torrent.rs  update.rs
tests/: test_game_service.py
tools/: benchmark_match_guard.py  catalog_match_guard_suite.py  match_guard_aliases.json  match_guard_cases.json  match_guard_catalog_cases.py  match_guard_model.json  match_guard_synthetic_cases.json  synthetic_match_guard_suite.py  train_match_guard.py
utils/: discord_utils.py  gr_link_encoder.py  text_utils.py
(+1782 files in other folders)
